[package]
name = "pcd"
version = "0.1.0"
authors = ["Drew Stone <drewstone329@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curve25519-dalek = { version = "3.0.0", features = ["u64_backend", "serde"], default-features = false }
merlin = { version = "2.0.0", default-features = false }
sha3 = { version = "0.9.1", default-features = false }
codec = { package = "parity-scale-codec", version = "1.3.4", features = ["derive"], default-features = false }
polynomials = { version = "0.2.4", git = "https://github.com/cargodog/polynomials", default-features = false }
num-bigint = { version = "0.3.1", default-features = false }

rand_core = { version = "0.5", default-features = false, features = ["alloc", "getrandom"] }
rand = { version = "0.7", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"], default-features = false }

[features]
default = ["std", "serde"]
std = [
    "codec/std",
    "rand/std",
    "rand"
]